--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -560,6 +560,7 @@
 			if (value == "async") {
 				asyncDiv.style.display = "block";
 				s3Div.style.display = "none";
+				asperaDiv.style.display = "none";
 				asyncTextDiv.style.display = "block";
 				if(driveDiv)
 					driveDiv.style.display = "none";
@@ -569,6 +570,7 @@
 			} else if (value == 's3') {
 				asyncDiv.style.display = "none";
 				s3Div.style.display = "block";
+				asperaDiv.style.display = "none";
 				asyncTextDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
@@ -578,9 +580,13 @@
 			} else if (value == 'drive') {
 				asyncDiv.style.display = "none";
 				s3Div.style.display = "none";
+				asperaDiv.style.display = "none";
 				asyncTextDiv.style.display = "none";
 				if(driveDiv) {
 					driveDiv.style.display = "block";
+				}
+				if(googleCloudDiv) {
+					googleCloudDiv.style.display = "none";
 				}
 				if(authorized != null) {
 					$("#submit").prop('disabled', false);
@@ -591,6 +597,7 @@
 			} else if (value == 'googleCloud') {
 				asyncDiv.style.display = "none";
 				s3Div.style.display = "none";
+				asperaDiv.style.display = "none";
 				asyncTextDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
