Fix Aspera fields visibility

--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -577,6 +577,7 @@
 				asyncDiv.style.display = "block";
 				s3Div.style.display = "none";
 				asyncTextDiv.style.display = "block";
+				asperaDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
 				if(googleCloudDiv)
@@ -586,6 +587,7 @@
 				asyncDiv.style.display = "none";
 				s3Div.style.display = "block";
 				asyncTextDiv.style.display = "none";
+				asperaDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
 				if(googleCloudDiv)
@@ -595,9 +597,12 @@
 				asyncDiv.style.display = "none";
 				s3Div.style.display = "none";
 				asyncTextDiv.style.display = "none";
+				asperaDiv.style.display = "none";
 				if(driveDiv) {
 					driveDiv.style.display = "block";
 				}
+				if(googleCloudDiv)
+					googleCloudDiv.style.display = "none";
 				if(authorized != null) {
 					$("#submit").prop('disabled', false);
 					$("#driveAuthlink").addClass('disabled');
@@ -608,6 +613,7 @@
 				asyncDiv.style.display = "none";
 				s3Div.style.display = "none";
 				asyncTextDiv.style.display = "none";
+				asperaDiv.style.display = "none";
 				if(driveDiv)
 					driveDiv.style.display = "none";
 				if(googleCloudDiv) {
