--- a/src/hpc-web/src/main/resources/templates/manageuser.html
+++ b/src/hpc-web/src/main/resources/templates/manageuser.html
@@ -53,9 +53,9 @@
 	src="js/bootstrap/3.3.7/bootstrap.min.js"></script>
 <script th:inline="javascript">
 	/*<![CDATA[*/
-	var results = "[[${searchresults}]]";
-	var type = "[[${session.hpcUser.userRole}]]";
-	var doc = "[[${session.hpcUser.doc}]]";
+	var results = [[${searchresults}]];
+	var type = [[${session.hpcUser.userRole}]];
+	var doc = [[${session.hpcUser.doc}]];
 	/*]]>*/
 </script>
 
@@ -94,7 +94,7 @@
 					}],
 					onRegisterApi : function(gridApi) {
 						$scope.grid1Api = gridApi;
-						if (type != "'SYSTEM_ADMIN'" && type != "'GROUP_ADMIN'")
+						if (type != "SYSTEM_ADMIN" && type != "GROUP_ADMINs")
 					        $scope.gridOptions1.columnDefs[4].visible = false;
 						$("#spinner").hide();
 			            $("#dimmer").hide();
@@ -104,7 +104,7 @@
 				$scope.gridOptions1.data = results;
 
 				$scope.showMe= function(val) {
-				    return val == doc.replace(/\'/g, "") || type == "'SYSTEM_ADMIN'" ;
+				    return val == doc.replace(/\'/g, "") || type == "SYSTEM_ADMIN" ;
 				  };
 				
 			} ]);
