--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -98,15 +98,13 @@
 </style>
 <script th:inline="javascript">
 /*<![CDATA[*/
-    var results = "[[${results}]]";
-    var totalRows = "[[${totalCount}]]";
+    var results = [[${results}]];
+    var totalRows = [[${totalCount}]];
     var currentPageSize = "[[${currentPageSize}]]";
     var currentPage = [[${currentPage}]];
     var totalPages = "[[${totalPages}]]";
     var queryAll = "[[${queryAll}]]";
-/*]]>*/
-</script>
-<script>
+
 var app = angular.module('app', ['ngAnimate', 'ngTouch', 'ui.grid', 'ui.grid.pagination', 'ui.grid.resizeColumns', 'ui.grid.moveColumns']);
 
 app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', function ($scope, $http, $interval,  uiGridConstants ) {
@@ -168,7 +166,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 	    return data.toLowerCase().replace(/_/g, ' ').replace(/(^|\s)\S/g, function(t) { return t.toUpperCase() });
 	  };
 }]);
-
+/*]]>*/
 </script>
 
 </head>
