HPCDATAMGM-1861: Add default value for Aspera User in modal

--- a/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
@@ -296,6 +296,7 @@
 										<label for="accessKey">Aspera Account User:</label> <input
 											type="text" class="form-control"
 											name="asperaUser" id="asperaUserId"
+											th:value="${asperaUser}"
 											placeholder="Enter Aspera User" size="40" />
 									</div>
 									<div class="col-sm-12 column">
