--- a/src/hpc-web/src/main/resources/templates/createuser.html
+++ b/src/hpc-web/src/main/resources/templates/createuser.html
@@ -103,8 +103,9 @@
 									</div>
 									<br/>
 									<div class="col-sm-12 column">
-									  <input th:if="${notifyUser == true}" type="checkbox" name="notifyUser" id="notifyUser" checked="checked"> Notify User</input>
-								      <input th:if="${notifyUser != true}" type="checkbox" name="notifyUser" id="notifyUser"> Notify User</input>
+									  <input th:if="${notifyUser == true}" type="checkbox" name="notifyUser" id="notifyUser" checked="checked"/> 
+								      <input th:if="${notifyUser != true}" type="checkbox" name="notifyUser" id="notifyUser"/> 
+								      <label for="notifyUser">Notify User</label>
 									</div>	
 								</div>
 								<div class="modal-footer">
