HPCDATAMGM-1879: Longer Path not wrapping and instead extending out of the box in Download Page

--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -100,7 +100,7 @@
 					<table>
 						<tr><td><div th:if="${downloadType == 'datafile'}">Selected File:</div>
 						<div th:if="${downloadType == 'collection'}">Selected Collection:</div><br/>
-						<div class="display: block;" >
+						<div class="display: block;" style="word-break: break-all">
 							<label th:text="${downloadFilePath}"></label> 
 						</div>
 						</td></tr>
