--- a/src/hpc-web/src/main/resources/templates/downloadfiles.html
+++ b/src/hpc-web/src/main/resources/templates/downloadfiles.html
@@ -494,9 +494,9 @@
 
 		$(document).ready(function(){
 			if($('#downloadType').val() == 'datafiles') {
-				$("#msgDownloadType").append("This page allows you to download the following selected data files to a Globus endpoint, S3 bucket, Google Drive, Google Cloud bucket or dbGaP bucket.");
+				$("#msgDownloadType").append("This page allows you to download the following selected data files to a Globus endpoint, an AWS S3 bucket, Google Drive, Google Cloud or dbGaP.");
 			} if($('#downloadType').val() == 'collections') {
-				$("#msgDownloadType").append("This page allows you to download the following selected collections to a Globus endpoint, S3 bucket, Google Drive, Google Cloud bucket or dbGaP bucket.");
+				$("#msgDownloadType").append("This page allows you to download the following selected collections to a Globus endpoint, an AWS S3 bucket, Google Drive, Google Cloud or dbGaP.");
 			}
 		});
 
