--- a/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
@@ -178,7 +178,7 @@
 												th:text="${hpcDataObjectDownloadStatusDTO.getResult()}"></label>
 										</div>
 										<div class="col-md-12 form-group" th:if="${hpcDataObjectDownloadStatusDTO.getResult() == null}">
-											<label for="Name">Transfer Completed:</label> <label th:if="${hpcDataObjectDownloadStatusDTO.getStagingInProgress() == null and !hpcDataObjectDownloadStatusDTO.getRestoreInProgress()}" id="regComplete">Download In Progress</label>
+											<label for="Name">Transfer Completed:</label> <label th:if="${hpcDataObjectDownloadStatusDTO.getInProgress() and hpcDataObjectDownloadStatusDTO.getStagingInProgress() == null and !hpcDataObjectDownloadStatusDTO.getRestoreInProgress()}" id="regComplete">Download In Progress</label>
 											<label th:if="${hpcDataObjectDownloadStatusDTO.getRestoreInProgress()}" id="regComplete">Restore In Progress</label>
 											<label th:if="${hpcDataObjectDownloadStatusDTO.getStagingInProgress() != null}" id="regComplete">Staging In Progress</label>
 										</div>
