--- a/src/hpc-web/src/main/resources/templates/dataobjectsdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsdownloadtask.html
@@ -303,7 +303,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="panel-heading" th:if="${(hpcDataObjectsDownloadStatusDTO.getStagingInProgressItems() == null or hpcDataObjectsDownloadStatusDTO.getStagingInProgressItems().size() == 0) and hpcDataObjectsDownloadStatusDTO.getInProgressItems() != null and hpcDataObjectsDownloadStatusDTO.getInProgressItems().size() > 0}">
+							<div class="panel-heading" th:if="${hpcDataObjectsDownloadStatusDTO.getInProgressItems() != null and hpcDataObjectsDownloadStatusDTO.getInProgressItems().size() > 0}">
 								<div class="col-md-3">
 									<h2>
 										<i class="fa fa-list-alt red"></i><strong>Download In Progress</strong>
