HPCDATAMGM-1876: Updating html template to work with upgraded version.

--- a/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
@@ -88,7 +88,10 @@
 								</div>
 								<div class="col-md-3 col-md-offset-6" th:if="${hpcBulkDataObjectDownloadRetry == true}">
 								<h2>
-									<strong> <a id="downloadfailed" class="btn btn-link btn-sm" th:href="@{'javascript:retryDownload(\'' + ${taskId} +'\',\''+${taskType} + '\')'}"><i class="fa fa-repeat" title="Retry" aria-hidden="true"></i></a></strong>
+									<strong> <button id="downloadfailed" class="btn btn-link btn-sm" 
+									th:data-task-id="${taskId}" th:data-task-type="${taskType}" 
+									th:onclick="retryDownload(this.getAttribute('data-task-id'),this.getAttribute('data-task-type'));">
+									<i class="fa fa-repeat" title="Retry" aria-hidden="true"></i></button></strong>
 								</h2>
 								</div>
 							</div>
