--- a/src/hpc-web/src/main/resources/templates/dataobjectsuploadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsuploadtask.html
@@ -183,7 +183,10 @@
 								</div>
 								<div class="col-md-3 col-md-offset-6" th:if="${hpcBulkDataObjectRegistrationRetry == true}">
 								<h2>
-									<strong> <a id="uploadfailed" class="btn btn-link btn-sm" th:href="@{'javascript:retryUpload(\'' + ${taskId} +'\',\''+${taskType} + '\')'}" ><i class="fa fa-repeat" title="Retry" aria-hidden="true"></i></a></strong>
+									<strong> <button id="uploadfailed" class="btn btn-link btn-sm" 
+									th:data-task-id="${taskId}" th:data-task-type="${taskType}" 
+									th:onclick="retryUpload(this.getAttribute('data-task-id'),this.getAttribute('data-task-type'));">
+									<i class="fa fa-repeat" title="Retry" aria-hidden="true"></i></button></strong>
 								</h2>
 								</div>
 							</div>
